# sphinx-graph-redux

./: .flake8  .gitignore  pyproject.toml
docs/: conf.py  index.rst
src/sphinx_graph/: __init__.py  config.py  directive.py  events.py  info.py  layout.py  parse.py  state.py
tests/: test_config.py  test_graph.py
tests/roots/test-fingerprints/: conf.py  index.rst
