[tool.poetry]
name = "sphinx_graph"
version = "0.2.0"
description = ""
authors = ["Daniel Eades <danieleades@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.3.0"


[tool.poetry.group.dev.dependencies]
# testing
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

# typing
types-docutils = "^0.19.1.1"

# linting
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.6.0"
flake8-future-annotations = "^1.0.0"
flake8-simplify = "^0.19.3"
flake8-unused-arguments = "^0.0.12"
mypy = "^0.991"
pep8-naming = "^0.13.2"

[tool.mypy]
strict = true
show_error_codes = true
files = "src,tests"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
